added superset chart

--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -9,8 +9,13 @@ dependencies:
     version: 0.28.0
     repository: file://charts/trino
     condition: trino.enabled
-  
+
   - name: hive
     version: 0.1.0
     repository: file://charts/hive
     condition: hive.enabled
+
+  - name: superset
+    version: 0.13.5
+    repository: file://charts/superset
+    condition: superset.enabled
