--- a/helm/charts/superset/templates/deployment-worker.yaml
+++ b/helm/charts/superset/templates/deployment-worker.yaml
@@ -107,8 +107,10 @@ spec:
             {{- toYaml .Values.extraEnvRaw | nindent 12 }}
             {{- end }}
           envFrom:
+            {{- if .Values.envFromSecret }}
             - secretRef:
                 name: {{ tpl .Values.envFromSecret . | quote }}
+            {{- end }}
             {{- range .Values.envFromSecrets }}
             - secretRef:
                 name: {{ tpl . $ | quote }}
