--- a/helm/charts/hive/templates/service.yaml
+++ b/helm/charts/hive/templates/service.yaml
@@ -12,5 +12,13 @@ spec:
       targetPort: {{ .Values.service.targetPort }}
       protocol: {{ .Values.service.protocol }}
       name: {{ .Values.service.name }}
+  {{- if and .Values.hiveServer2.enabled .Values.hiveServer2.service }}
+    {{- range .Values.hiveServer2.service }}
+    - name: {{ .name }}
+      port: {{ .port }}
+      targetPort: {{ .targetPort }}
+      protocol: {{ .protocol }}
+    {{- end }}
+  {{- end }}
   selector:
     {{- include "hive.selectorLabels" . | nindent 4 }}
