--- a/helm/charts/hive/templates/deployment-hs2.yaml
+++ b/helm/charts/hive/templates/deployment-hs2.yaml
@@ -1,8 +1,9 @@
+{{- if .Values.hiveServer2.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: {{ include "hive.fullname" . }}-thirft
+  name: {{ include "hive.fullname" . }}-server
   labels:
     {{- include "hive.labels" . | nindent 4 }}
 spec:
@@ -43,14 +44,14 @@ spec:
               protocol: {{ .Values.service.protocol }}
           env:
             - name: SERVICE_NAME
-              value: "metastore"
+              value: "hiveserver2"
           {{- if .Values.env }}
             {{- toYaml .Values.env | nindent 12 }}
           {{- end }}
           livenessProbe:
-            {{- toYaml .Values.livenessProbe | nindent 12 }}
+            {{- toYaml .Values.hiveServer2.livenessProbe | nindent 12 }}
           readinessProbe:
-            {{- toYaml .Values.readinessProbe | nindent 12 }}
+            {{- toYaml .Values.hiveServer2.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
@@ -73,3 +74,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
