--- a/superset/Dockerfile
+++ b/superset/Dockerfile
@@ -2,6 +2,6 @@ FROM apache/superset:4.1.1
 USER root
 
 RUN pip install --upgrade pip \
-  && pip install trino psycopg2-binary Pillow pyhive
+  && pip install trino psycopg2-binary Pillow pyhive thrift thrift_sasl
 
 USER superset
